[metadata]
name = EnigmaOP
version = 0.2
author = Ninad
author_email = ninadinraltime@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ninadhegde/EnigmaOP
project_urls =
    Bug Tracker = https://github.com/ninadhegde/EnigmaOP
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src